<resources>
    <string name="app_name">Loca_Market</string>
    <string name="tv_welcome">Bienvenu</string>
    <string name="msg_splash_screen">Sélectionner comment voulez \n vous utiliser l\'application \n SVP</string>
    <string name="b_seller">Commerçant</string>
    <string name="b_client">Client</string>
    <string name="desc_img_login">image de la connexion</string>
    <string name="tv_login">Connexion</string>
    <string name="desc_ic_username">icon du nom d\'utilisateur</string>
    <string name="tv_username">Nom d\'utilisateur / Email</string>
    <string name="desc_ic_password">icon du nom mot de passe</string>
    <string name="tv_password">Mot de passe</string>
    <string name="b_forgot_password">Mot de passe oublié !</string>
    <string name="tv_msg_registration">Vous n\'êtes pas encore inscrit !</string>
    <string name="b_registration">Inscription</string>
    <string name="desc_img_registration">image de l\'inscription</string>
    <string name="tv_title_registration">Inscription</string>
    <string name="desc_ic_email">icon de l\'email</string>
    <string name="tv_email">Email</string>
    <string name="tv_msg_already_registred">Vous êtes inscrit !</string>
    <string name="b_login">Connexion</string>
    <string name="b_registation">Inscription</string>
    <string name="tv_title_forgot_password">MOT DE PASSE OUBLIÉ</string>
    <string name="desc_img_forgot_password">Image mot de passe oublié</string>
    <string name="tv_text_forgot_password">Entrez l\'adresse email que vous avez utilisé pour créer votre compte et nous vous envérons un lien
pour réinitialiser votre mot de passe</string>
    <string name="b_reset">Réinitialiser</string>
    <string name="boutique">Boutique</string>
    <string name="recherche">Recherche</string>
    <string name="commandes">Commandes</string>
    <string name="profile">Profile</string>
    <string name="gerer">Gérer</string>
    <string name="ajouter_un_produit">Ajouter un Produit</string>
    <string name="modifier_un_produit">Modifier un Produit</string>
    <string name="libel">Libelé</string>
    <string name="marque">Marque</string>
    <string name="prix">Prix</string>
    <string name="cat_gorie">Catégorie</string>
    <string name="d_scription">Déscription</string>
    <string name="ajouter">Ajouter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modifer">Modifer</string>
    <string name="g_rer_mes_produits">Gérer mes produits</string>
    <string name="g_rer_ma_boutique">Gérer ma Boutique</string>
    <string name="vue_lin_aire">vue linéaire</string>
    <string name="vue_tableaux">vue tableaux</string>
    <string name="quantit">quantité</string>
    <string name="status">status</string>
    <string name="g_rer_les_offres">Gérer les offres</string>
    <string name="ajouter_une_offre">Ajouter une offre</string>
    <string name="modifer_une_offre">Modifer une offre</string>
    <string name="supprimer_une_offre">Supprimer une offre</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="email">Email</string>

    <string name="numero">Numero</string>
    <string name="role">Role</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="ancien_mot_de_passe">Ancien mot de passe</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="pourcentage_de_l_offre">Pourcentage de l\'offre</string>
    <string name="pourcentage">Pourcentage</string>
    <string name="produit">Produit</string>

    <string name="notification_title">Nouvelle Notification</string>
    <string name="channelID" translatable="false">Channel01</string>
</resources>