<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/storeFragment"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/boutique" />

    <item android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search"
        android:title="@string/recherche" />

    <item android:id="@+id/ordersFragment"
        android:icon="@drawable/ic_baseline_order"
        android:title="@string/commandes" />

    <item android:id="@+id/profilFragment"
        android:icon="@drawable/ic_baseline_profile"
        android:title="@string/profile" />

    <item android:id="@+id/manageFragment"
        android:icon="@drawable/ic_baseline_menu"
        android:title="@string/gerer" />




</menu>



