<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Client.ClientRegistrationActivity">
    <ImageView
        android:id="@+id/img_client_registration"
        android:layout_width="180dp"
        android:layout_height="102dp"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/desc_img_registration"
        android:src="@drawable/ic_inscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_client_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_registration"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textStyle="bold|italic"
        android:textColor="@color/red_900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_client_registration" />

    <LinearLayout
        android:id="@+id/primary_layout_client_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_client_registration">

        <LinearLayout
            android:id="@+id/secondary_layout_client_registration"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ic_email_client_registration"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:contentDescription="@string/desc_ic_email"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_email" />
            <LinearLayout
                android:id="@+id/tertiary_layout_client_regstration"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_email_client_regstration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_email"
                    android:textColor="@color/gray_800"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    />
                <EditText
                    android:id="@+id/et_email_client_regstration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="janedo123@gmail.com"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/secondary_layout_client_regstration"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ic_username_client_regstration"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:contentDescription="@string/desc_ic_username"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_username" />
            <LinearLayout
                android:id="@+id/tertiary_layout_client_regstration2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_username_client_regstration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_username"
                    android:textColor="@color/gray_800"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:id="@+id/et_username_client_regstration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="janedo123"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/secondary_layout_client_regstration3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ic_password_client_regstration"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:contentDescription="@string/desc_ic_password"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_password" />
            <LinearLayout
                android:id="@+id/tertiary_layout_client_regstration3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_password_client_regstration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_password"
                    android:textColor="@color/gray_800"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:id="@+id/et_password_client_regstration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="**********"
                    android:inputType="textPassword"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/b_register_client"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
            android:onClick="click_b_register_client"
            android:text="@string/b_registration" />
        <TextView
            android:id="@+id/tv_msg_already_client_regstration"
            android:layout_width="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:text="@string/tv_msg_already_registred"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:id="@+id/b_go_client_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_login"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textStyle="bold|italic"
            android:textColor="@color/red_900"
            android:layout_gravity="center_horizontal"
            android:onClick="clientLogin"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_client_signe_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>