<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userAuth.ForgotPasswordActivity">
    <TextView
        android:id="@+id/tv_title_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/tv_title_forgot_password"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/gray_800"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/img_forgot_password"
        android:layout_width="180dp"
        android:layout_height="102dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/desc_img_forgot_password"
        android:src="@drawable/ic_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_forgot_password" />
    <TextView
        android:id="@+id/tv_text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/tv_text_forgot_password"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_forgot_password" />

    <LinearLayout
        android:id="@+id/primary_layout_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_forgot_password">

        <LinearLayout
            android:id="@+id/secondary_layout_forgot_password1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_email_forgot_password"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/desc_ic_email"
                android:src="@drawable/ic_email" />

            <LinearLayout
                android:id="@+id/tertiary_layout_forgot_password1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/gray_800" />

                <EditText
                    android:id="@+id/et_email_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="janedo123@gmail.com" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/b_resetr"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
            android:text="@string/b_reset" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>