<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userAuth.LoginActivity">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/desc_img_login"
        android:src="@drawable/ic_baseline_person_login_120"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/red_600"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_login" />

    <LinearLayout
        android:id="@+id/primary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login">


        <LinearLayout
            android:id="@+id/secondary_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_Username"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/desc_ic_username"
                android:src="@drawable/ic_username" />

            <LinearLayout
                android:id="@+id/tertiary_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_username"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/gray_800" />

                <EditText
                    android:id="@+id/et_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="janedo123@gmail.com" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondary_layout2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_password"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/desc_ic_password"
                android:src="@drawable/ic_password" />

            <LinearLayout
                android:id="@+id/tertiary_layout3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/gray_800" />

                <EditText
                    android:id="@+id/et_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="**********"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/b_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
            android:onClick="click_b_login"
            android:text="@string/tv_login" />

        <Button
            android:id="@+id/b_forgot_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:onClick="forgotPassword"
            android:text="@string/b_forgot_password"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/red_900"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tv_msg_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/tv_msg_registration"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

        <Button
            android:id="@+id/b_go_register"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="registration"
            android:text="@string/b_registration"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/red_900"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>